# convertor

./: CMakeCache.txt  CMakeLists.txt  Defines.hpp  Logics.cpp  Logics.hpp  Makefile  README.md  UserInterface.cpp  UserInterface.hpp  a.out  cmake_install.cmake  compile_commands.json  convertor  convertor.cbp  defines.txt  defines_en.txt  dictionar.in  fonts.txt  history.txt  instruction_en.txt  instruction_ro.txt  logicsinput.cpp  main.cpp  run  settings.txt  songs.txt  themes.txt  whattodo.md
__Others__/: a.out  convert_test.cpp  musictest.cpp  possible.txt  results.txt  sound_test.cpp  test  test.cpp  testInput.cpp  testassetColor.cpp  visualfeedback  visualfeedback.cpp
__Others__/lepaen/: CMakeLists.txt  LogicsFunctions.cpp  main.cpp  toy.txt
assets/: icon.aseprite
assets/images/: texture.json
lib/: libsfml-audio.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
lib/pkgconfig/: sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
linux/: history.txt  settings.txt
linux/lib/: libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1
linux/src/: InputForm.cpp  InputForm.hpp  LogicsDataStructures.hpp  LogicsEnglish.hpp  LogicsRomanian.hpp  UserInterface.hpp
onycode/: instruction_ro.txt  settings.txt  themes.txt
onycode/src/: Defines.hpp  InputForm.cpp  LogicsEnglish.cpp  LogicsRomanian.cpp  UserInterface.cpp  UserInterface.hpp
src/: Defines.hpp  InputForm.cpp  InputForm.hpp  Logics.cpp  Logics.hpp  LogicsDataStructures.cpp  LogicsDataStructures.hpp  LogicsEnglish.cpp  LogicsEnglish.hpp  LogicsRomanian.cpp  LogicsRomanian.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
windows/convertorcodeblocks/: Defines.hpp  convertorcodeblocks.cbp  convertorcodeblocks.depend  main.cpp  settings.txt  (+1 more)
(+52 files in other folders)
